--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
+    "nodemon": "^2.0.7",
     "sequelize": "^6.6.2"
   }
 }
