--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.js"
+    "start": "node src/index.js"
   },
   "author": "Vishal acharya",
   "license": "ISC",
@@ -17,7 +17,6 @@
     "helmet": "^4.4.1",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
-    "nodemon": "^2.0.7",
     "sequelize": "^6.6.2"
   }
 }
