--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "quickorder-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "engines": {
+    "node": "14.x"
+  },
+  "main": "src/index.js",
   "scripts": {
     "start": "nodemon src/index.js"
   },
